fix: reset padding and gap in content and stack styles

--- a/datamapplot/static/css/containers_and_stacks.css
+++ b/datamapplot/static/css/containers_and_stacks.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    padding: 8px;
+    padding: 0px;
     /* Use grid to create the basic layout */
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -16,8 +16,8 @@
   .stack {
     display: flex;
     flex-direction: column;
-    gap: 4px;
-    padding: 4px;
+    gap: 0px;
+    padding: 0px;
     pointer-events: none;
     max-height: 50vh;
     overflow-y: visible;
